syntax = "proto3";

package date;

option java_package = "com.example.date";
option go_package = "github.com/yourorg/yourrepo/shared-proto/datepb;datepb";

// The date service simply returns “today” in a structured form.
message DateRequest {} 

message DateResponse {
  int32 year  = 1;
  int32 month = 2;
  int32 day   = 3;
  // Also include an ISO-formatted date string if you like
  string iso  = 4;
}

service DateService {
  // Gets the current date according to the server’s clock.
  rpc GetCurrentDate(DateRequest) returns (DateResponse);
}